--- a/Slides/lecture03.tex
+++ b/Slides/lecture03.tex
@@ -7,7 +7,7 @@
 % suto framework
 %  pretreatment: Do unit history or broader context influence our results? We can measure to see if people have been pretreated, but sometimes we can't do that or can't know in advance
 %  behaviors/beavioral intentions
-
+% Hawthorne effects
 
 \date[]{}
 
