--- a/Slides/preamble.tex
+++ b/Slides/preamble.tex
@@ -12,7 +12,7 @@
 \setbeamercolor{enumerate item}{fg=dark-gray}
 
 \setbeamertemplate{navigation symbols}{}
-%\setbeamertemplate{mini frames}[default]
+\setbeamertemplate{mini frames}{}
 %\setbeamercovered{dynamics}
 \setbeamerfont*{title}{size=\Large,series=\bfseries}
 \setbeamerfont{footnote}{size=\tiny}
